.provarCaches/00Df2000001KKNJEA4/objects/IncapMessaging__Mobile_Connect__mdt.object
<CustomObject>
    <fields>
        <fullName>IncapMessaging__Callback__c</fullName>
        <label>Callback</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IncapMessaging__Consumer_Key__c</fullName>
        <label>Consumer Key</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IncapMessaging__Consumer_Secret__c</fullName>
        <label>Consumer Secret</label>
        <type>TextArea</type>
    </fields>
    <label>Mobile Connect</label>
    <pluralLabel>Mobile Connects</pluralLabel>
</CustomObject>